--- a/product.html
+++ b/product.html
@@ -8,7 +8,11 @@
   <link rel="stylesheet" href="css/index.css" />
 
   <style>
-    body { background:#f6f6f6; }
+    body {
+      background:#f6f6f6;
+      margin:0;
+      padding-bottom:90px; /* ✅ MOBILE CUT FIX */
+    }
 
     .product-wrapper{
       max-width:1200px;
@@ -100,17 +104,31 @@
       flex-wrap:wrap;
     }
 
+    /* ===== BUTTONS (ONLY HIGHLIGHT) ===== */
     .btn{
-      padding:14px 26px;
-      border-radius:30px;
+      padding:14px 28px;
+      border-radius:32px;
       border:none;
       cursor:pointer;
       font-weight:bold;
       font-size:15px;
+      transition:all .25s ease;
     }
 
-    .btn-buy{ background:#c89b3c; }
-    .btn-wa{ background:#25D366;color:#fff; }
+    .btn-buy{
+      background:linear-gradient(135deg,#c89b3c,#e0b04f);
+      box-shadow:0 10px 28px rgba(200,155,60,.45);
+    }
+
+    .btn-buy:active{ transform:scale(.96); }
+
+    .btn-wa{
+      background:#25D366;
+      color:#fff;
+      box-shadow:0 10px 28px rgba(37,211,102,.45);
+    }
+
+    .btn-wa:active{ transform:scale(.96); }
 
     /* ===== STICKY MOBILE BAR ===== */
     .sticky-bar{
@@ -135,14 +153,23 @@
 
       .sticky-bar button{
         flex:1;
-        padding:14px;
-        border-radius:30px;
+        padding:15px;
+        border-radius:32px;
         font-weight:bold;
         border:none;
+        transition:transform .2s;
       }
 
-      .sticky-buy{ background:#c89b3c; }
-      .sticky-wa{ background:#25D366;color:#fff; }
+      .sticky-bar button:active{ transform:scale(.96); }
+
+      .sticky-buy{
+        background:linear-gradient(135deg,#c89b3c,#e0b04f);
+      }
+
+      .sticky-wa{
+        background:#25D366;
+        color:#fff;
+      }
     }
 
     footer{
@@ -171,6 +198,7 @@
 
 <footer>© 2026 Sharma Watch</footer>
 
+<!-- ❌ JS UNTOUCHED -->
 <script>
 const API = "https://sharma-watch-backend.onrender.com";
 const OWNER_PHONE = "9779827286613";
