--- a/product.html
+++ b/product.html
@@ -221,9 +221,8 @@ fetch(API + "/api/product/" + id)
 
 function renderProduct(p){
   images = (p.images && p.images.length)
-    ? p.images.map(i => API + i)
-    : ["https://via.placeholder.com/500"];
-
+   ? p.images.map(i => i.startsWith("http") ? i : API + i)
+   : ["https://via.placeholder.com/500"];
   index = 0;
 
   document.getElementById("productContainer").innerHTML = `
@@ -245,7 +244,7 @@ function renderProduct(p){
       <div class="product-details">
         <h1>${p.name}</h1>
         <div class="brand">${p.brand}</div>
-        <div class="price">₹${p.price}</div>
+        <div class="price">₹${p.price ?? p.mrp ?? "N/A"}</div>
 
         <div class="trust-points">
           <div>💎 Original Product</div>
