--- a/index.html
+++ b/index.html
@@ -274,7 +274,9 @@
 
 <section class="section">
   <h2>Featured Watches</h2>
-  <div class="product-grid" id="featuredGrid"></div>
+  <div class="product-grid" id="featuredGrid">
+   <p style="grid-column:1/-1;text-align:center">Loading featured watches…</p>
+</div>
 </section>
 
 <section class="section story">
@@ -321,28 +323,45 @@
 const API = "https://sharma-watch-backend.onrender.com";
 
 fetch(API + "/api/products")
-  .then(r=>r.json())
-  .then(products=>{
-    const grid=document.getElementById("featuredGrid");
-    grid.innerHTML="";
-    products.slice(0,6).forEach(p=>{
-      const img = p.image ? API+p.image :
-        "https://via.placeholder.com/400x400?text=No+Image";
-      const card=document.createElement("div");
-      card.className="product-card";
-      card.innerHTML=`
-        <img src="${img}">
+  .then(r => {
+    if (!r.ok) throw new Error("API failed");
+    return r.json();
+  })
+  .then(products => {
+    const grid = document.getElementById("featuredGrid");
+    grid.innerHTML = "";
+
+    if (!products || products.length === 0) {
+      grid.innerHTML =
+        "<p style='grid-column:1/-1;text-align:center'>No products available</p>";
+      return;
+    }
+
+    products.slice(0, 6).forEach(p => {
+      const img = p.image
+        ? (p.image.startsWith("http") ? p.image : API + p.image)
+        : "https://via.placeholder.com/400x400?text=No+Image";
+
+      const card = document.createElement("div");
+      card.className = "product-card";
+      card.innerHTML = `
+        <img src="${img}" loading="lazy">
         <div class="product-info">
           <h3>${p.name}</h3>
           <p>${p.brand}</p>
           <div class="price">₹${p.price}</div>
         </div>
       `;
-      card.onclick=()=>location.href="product.html?id="+p.id;
+
+      card.onclick = () => {
+        location.href = "product.html?id=" + p.id;
+      };
+
       grid.appendChild(card);
     });
+  })
+  .catch(() => {
+    document.getElementById("featuredGrid").innerHTML =
+      "<p style='grid-column:1/-1;text-align:center'>Failed to load products</p>";
   });
 </script>
-
-</body>
-</html>
